--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,8 @@
     <title>React App</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/print.css" media="print">
+
 
   </head>
   <body>
